fix extra spacing

--- a/src/app.css
+++ b/src/app.css
@@ -226,7 +226,7 @@ section {
 }
 
 section:first-of-type {
-  padding-top: 7rem;
+  padding-top: 4rem;
 }
 
 section.light + section.light,
@@ -237,7 +237,7 @@ section.dark + section.dark {
 
 @media (max-width: 1160px) {
   section:first-of-type {
-    padding-top: 10rem;
+    padding-top: 3rem;
   }
 }
 
